// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult should render 1`] = `
<Grid
  gridGap="25px"
  gridTemplateColumns="repeat(auto-fit, minmax(280px, 1fr))"
/>
`;

exports[`SearchResult should render Error 1`] = `
<Box>
  Error...
</Box>
`;

exports[`SearchResult should render Loading 1`] = `
<Box>
  Loading...
</Box>
`;

exports[`SearchResult should render products 1`] = `
<Grid
  gridGap="25px"
  gridTemplateColumns="repeat(auto-fit, minmax(280px, 1fr))"
>
  <ProductCard
    imageUrl="__IMAGE_URL__"
    key="__ID__"
    price="100"
    title="__TITLE__"
  />
</Grid>
`;
